sort by added search updated

--- a/src/interfaces/appsite/templates/base.html
+++ b/src/interfaces/appsite/templates/base.html
@@ -67,7 +67,7 @@
 <!--Search div-->
 
 <div class="search-input-div" id="search_bar">
-  <form action="{% url 'search_input' %}" method="GET">
+  <form action="{% url 'search_and_sort' %}" method="GET">
     <input name="search-input" class="search-input"></input><input type="submit" value="Search"/>
     </form>
     </div>
