--- a/src/interfaces/appsite/static/css/base.css
+++ b/src/interfaces/appsite/static/css/base.css
@@ -26,7 +26,7 @@ hr{
     border: 0;
     height: 1px;
     background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-  }
+}
 
   /* Nav */
 
@@ -83,7 +83,7 @@ hr{
 /* Icons */
 
 .fa-magnifying-glass{
-  color: white;
+  color: #5FD068;
   font-size: 25px;
   transition: all 0.3s ease;
   cursor: pointer;
@@ -111,7 +111,7 @@ background-clip: text;
 }
 
 .fa-user:hover{
-  color: #05D23A;
+  color: #2192FF;
 }
 
 .fa-instagram:hover{
