--- a/src/interfaces/appsite/templates/base.html
+++ b/src/interfaces/appsite/templates/base.html
@@ -47,7 +47,7 @@
   <div class="nav">
     <div class="nav-socials">
       <i class="fa-solid fa-magnifying-glass" onclick="searchDiv()"></i>
-      {% if request.user.is_authenticated %}<a title="Logout" class="fa-regular fa-user" href="{% url 'sign_out' %}"></a>
+      {% if request.user.is_authenticated %}<a class="fa-regular fa-user" href="{% url 'account_page' %}"></a>
       {% else %}<a title="Login" class="fa-regular fa-user" href="{% url 'sign' %}"></a>
       {% endif %}
       <a class="fa-brands fa-facebook-f"></a>
