--- a/src/interfaces/appsite/templates/account_page.html
+++ b/src/interfaces/appsite/templates/account_page.html
@@ -16,9 +16,9 @@
       <li><p>Email: {{ email }}</p>
     </li>
       <li>
-          <form method="post" action="">
+          <form method="post" action="{% url 'newsletter_subscribing' %}">
               {% csrf_token %}
-      <input type="checkbox" name="newsletter-checkbox" id="news-in" {% if newsletter %}checked{% endif %}/>
+      <input type="checkbox" name="newsletter-checkbox" id="news-in" value="checked" {% if newsletter.subscribed %}checked{% endif %}/>
   <label for="news-in">Newsletter</label>
     </li>
     <li>
