few fixes and css updates

--- a/src/interfaces/appsite/static/css/account_page.css
+++ b/src/interfaces/appsite/static/css/account_page.css
@@ -2,7 +2,6 @@
   width: 50%;
   margin: auto;
   text-align: center;
-  border: solid thin;
   padding: 10px;
   font-family: 'Montserrat', sans-serif;
   margin-bottom: 100px;
@@ -15,4 +14,11 @@
 
 .centered-div li{
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 500px) {
+  .centered-div{
+    width: 100%;
+    padding-left:0;
+  }
 }
