--- a/src/interfaces/appsite/templates/sign/sign.html
+++ b/src/interfaces/appsite/templates/sign/sign.html
@@ -9,6 +9,11 @@
 
     <title>Sign</title>
 
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_io/apple-touch-icon.png' %}">
+<link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_io/favicon-32x32.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_io/favicon-16x16.png' %}">
+<link rel="manifest" href="{% static 'favicon_io/site.webmanifest' %}">
+
      <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'>
 
 <link rel="stylesheet" href="{% static 'css/sign/sign.css' %}">
